Fixed the animation to show the menu. And also blurred the background and made the bg a little more transparent

--- a/src/layouts/sass/base/_page.scss
+++ b/src/layouts/sass/base/_page.scss
@@ -44,6 +44,9 @@ body {
       @include vendor('transition', 'none !important');
     }
   }
+  .blur {
+    filter: blur(10px);
+  }
 }
 
 .posts {
