--- a/src/layouts/sass/components/_button.scss
+++ b/src/layouts/sass/components/_button.scss
@@ -19,8 +19,8 @@ button,
   background-color: transparent;
   border-radius: _size(border-radius);
   border: 0;
-  box-shadow: inset 0 0 0 2px _palette(border-bg);
-  color: _palette(accent) !important;
+  box-shadow: inset 0 0 0 2px _palette(green2);
+  color: _palette(bg) !important;
   cursor: pointer;
   display: inline-block;
   font-family: _font(family-heading);
@@ -52,20 +52,20 @@ button,
   }
 
   &.special {
-    background-color: _palette(accent);
+    background-color: _palette(green2);
     box-shadow: none;
 
     &:hover {
-      background-color: desaturate(lighten(_palette(accent), 3), 1.5);
+      background-color: desaturate(lighten(_palette(green2), 3), 1.5);
     }
 
     &:active {
-      background-color: saturate(darken(_palette(accent), 3), 1.5);
+      background-color: saturate(darken(_palette(green2), 3), 1.5);
     }
 
     &.icon {
       &:before {
-        color: mix(_palette(fg-bold), _palette(accent), 25%);
+        color: mix(_palette(fg-bold), _palette(green2), 25%);
       }
     }
   }
