--- a/src/layouts/sass/layout/_menu.scss
+++ b/src/layouts/sass/layout/_menu.scss
@@ -20,7 +20,7 @@
     ('opacity #{_duration(menu)} ease', 'visibility #{_duration(menu)}')
   );
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background: transparentize(_palette(bg), 0);
+  background: transparentize(_palette(bg), 0.1);
   cursor: default;
   height: 100vh;
   left: 0;
@@ -90,7 +90,7 @@
         text-transform: uppercase;
 
         &:hover {
-          background: saturate(darken(_palette(accent), 3), 1.5);
+          background: saturate(darken(_palette(green1), 3), 1.5);
         }
       }
     }
